<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory>
        android:title="Preferences"
        <ListPreference android:title="@string/prefDialogTitle"
            android:positiveButtonText="@string/buttonOK" 
            android:negativeButtonText="@string/buttonCancel" 
            android:entries="@array/prefsListArray" 
            android:entryValues="@array/prefsListValues" 
            android:key="@string/listPref" 
            android:enabled="true" android:summary="@string/summaryDisplayOptions" android:selectable="true" android:defaultValue="0">
        </ListPreference>
        <CheckBoxPreference 
            android:title="@string/showRPM" 
            android:key="@string/showRPM" 
            android:summary="@string/showRPM_summary" 
            android:enabled="true" 
            android:selectable="true" 
            android:defaultValue="true" android:disableDependentsState="true">
        </CheckBoxPreference>
        <CheckBoxPreference android:key="@string/ecoMode" android:title="@string/ecoModeTitle" android:summary="@string/ecoModeSummary" android:dependency="@string/showRPM" android:shouldDisableView="true" android:defaultValue="false"></CheckBoxPreference><ListPreference android:title="@string/colorOrder" android:summary="@string/colorOrderSummary" android:defaultValue="0" android:key="colorOrder" android:entries="@array/prefsListColorOrderArray" android:entryValues="@array/prefsListColorOrderValues" android:enabled="true" android:selectable="true"></ListPreference><ListPreference android:title="@string/prefsDisplayOrder" android:summary="@string/prefsDisplayOrderSummary" android:enabled="true" android:key="prefDisplayOrder" android:selectable="true" android:entries="@array/prefsListDisplayOrderArray" android:entryValues="@array/prefsListDisaplyOrderValues" android:defaultValue="0"></ListPreference><CheckBoxPreference android:key="@string/debugMode" android:title="@string/debugMode" android:summary="@string/debugRPMSummary" android:defaultValue="false"></CheckBoxPreference>
        
        
        
    </PreferenceCategory>
    
</PreferenceScreen>
